--- a/templates/index.html
+++ b/templates/index.html
@@ -169,8 +169,8 @@
             </div>
             <!-- Contact Info -->
             <div class="contact-info">
-              <p>Mobile: +91 7898474250</p>
-              <p>Email: samthosh@crosscultureconnects.com</p>
+              <p>Mobile: +254743789242</p>
+              <p>Email: noorhafowbare@gmail.com</p>
             </div>
           </div>
         </div>
