--- a/templates/index.html
+++ b/templates/index.html
@@ -149,21 +149,27 @@
             <ul>
               <li><a href="#">Home</a></li>
               <li><a href="#">About</a></li>
+              <li><a href="#">Our Courses</a></li>
+              <li><a href="{{ url_for('mentors') }}">Technical mentors</a></li>
               <li><a href="#">Contact</a></li>
             </ul>
           </div>
           <!-- Newsletter Section -->
           <div class="footer-column newsletter">
-            <h3>Newsletter</h3>
+            <h3>Get In Touch</h3>
             <form>
               <input type="email" placeholder="Email Address" required />
-              <button type="submit">Subscribe</button>
+              <button type="submit">send me email</button>
             </form>
             <!-- Social Media Icons -->
             <div class="social-icons">
-              <a href="#"><i class="fab fa-whatsapp"></i></a>
+              <a href="https://wa.me/+254743789242" target="_blank"
+                ><i class="fab fa-whatsapp"></i
+              ></a>
               <a href="#"><i class="fab fa-instagram"></i></a>
-              <a href="#"><i class="fab fa-facebook-f"></i></a>
+              <a href="https://www.facebook.com/Kazali Isse Bare"
+                ><i class="fab fa-facebook-f"></i
+              ></a>
               <a href="#"><i class="fab fa-linkedin-in"></i></a>
               <a href="#"><i class="fab fa-twitter"></i></a>
             </div>
@@ -176,7 +182,7 @@
         </div>
         <!-- Footer Bottom -->
         <div class="footer-bottom">
-          <p>&copy; 2023 crosscultureconnects.com</p>
+          <p>&copy; 2024 Al-Noor Bootcamp</p>
         </div>
       </div>
     </footer>
