--- a/templates/apply.html
+++ b/templates/apply.html
@@ -136,6 +136,7 @@
               Mobile App Development
             </option>
             <option value="Digital Marketing">Digital Marketing</option>
+            <option value="E-Commerce">E-Commerce</option>
           </select>
         </div>
         <button type="submit" id="apply-submit-button">
