--- a/templates/courses.html
+++ b/templates/courses.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Al Noor Bootcamp</title>
     <!-- Link to the external CSS in the css folder -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
-
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/index.css') }}"
+    />
 
     <link
       rel="stylesheet"
@@ -15,8 +17,6 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
-
-    
   </head>
   <body>
     <nav class="navbar">
@@ -35,7 +35,6 @@
         <div></div>
       </div>
     </nav>
-    
 
     <section class="our-courses">
       <div class="container">
@@ -47,14 +46,14 @@
         <div class="course-grid">
           <div class="course-card">
             <div class="course-icon">⚡</div>
-            <h3>Networking</h3>
+            <h3>Web Development</h3>
             <p>
               Learn the intricacies of computer networking and communication.
             </p>
           </div>
           <div class="course-card">
             <div class="course-icon">🎨</div>
-            <h3>UI/UX Design</h3>
+            <h3>Data Sciencs</h3>
             <p>
               Master the art of creating user-friendly and attractive
               interfaces.
@@ -62,17 +61,17 @@
           </div>
           <div class="course-card">
             <div class="course-icon">📱</div>
-            <h3>App Development</h3>
+            <h3>Cybersecurity</h3>
             <p>Develop mobile applications for Android and iOS platforms.</p>
           </div>
           <div class="course-card">
             <div class="course-icon">💻</div>
-            <h3>Web Development</h3>
+            <h3>Mobile app Development</h3>
             <p>Build responsive and dynamic websites from scratch.</p>
           </div>
           <div class="course-card">
             <div class="course-icon">📝</div>
-            <h3>Wordpress</h3>
+            <h3>digital marketting</h3>
             <p>Learn how to create and manage websites using WordPress.</p>
           </div>
           <div class="course-card">
