--- a/templates/apply.html
+++ b/templates/apply.html
@@ -144,6 +144,9 @@
         </button>
       </form>
 
+      <div id="application-loading-message" class="popup" style="display: none">
+        <p>Sending your application, please wait...</p>
+      </div>
       <div id="application-success-message" class="popup" style="display: none">
         <p>Thank you for applying!</p>
       </div>
