--- a/templates/index.html
+++ b/templates/index.html
@@ -170,12 +170,18 @@
               <a href="https://wa.me/+254743789242" target="_blank"
                 ><i class="fab fa-whatsapp"></i
               ></a>
-              <a href="#"><i class="fab fa-instagram"></i></a>
+              <a href="https://www.instagram.com/noorissebare77"
+                ><i class="fab fa-instagram"></i
+              ></a>
               <a href="https://www.facebook.com/Kazali Isse Bare"
                 ><i class="fab fa-facebook-f"></i
               ></a>
-              <a href="#"><i class="fab fa-linkedin-in"></i></a>
-              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="https://www.linkedin.com/in/Noor Hafow Bare"
+                ><i class="fab fa-linkedin-in"></i
+              ></a>
+              <a href="https://twitter.com/Noor Hafow Bare"
+                ><i class="fab fa-twitter"></i
+              ></a>
             </div>
             <!-- Contact Info -->
             <div class="contact-info">
