--- a/templates/applications.html
+++ b/templates/applications.html
@@ -12,6 +12,22 @@
   <body>
     <div class="container">
       <h1>Application List</h1>
+
+      <!-- Search Form -->
+      <form
+        method="get"
+        action="{{ url_for('view_applications') }}"
+        style="margin-bottom: 20px"
+      >
+        <input
+          type="text"
+          name="search"
+          placeholder="Search applications..."
+          value="{{ search }}"
+        />
+        <button type="submit">Search</button>
+      </form>
+
       <table>
         <tr>
           <th>ID</th>
@@ -59,6 +75,21 @@
         </tr>
         {% endfor %}
       </table>
+
+      <!-- Pagination Controls -->
+      <div class="pagination">
+        {% if page > 1 %}
+        <a href="{{ url_for('view_applications', page=page-1, search=search) }}"
+          >Previous</a
+        >
+        {% endif %}
+        <span>Page {{ page }}</span>
+        {% if page * per_page < total %}
+        <a href="{{ url_for('view_applications', page=page+1, search=search) }}"
+          >Next</a
+        >
+        {% endif %}
+      </div>
     </div>
   </body>
 </html>
