--- a/templates/edit_application.html
+++ b/templates/edit_application.html
@@ -62,7 +62,9 @@
 
             <button type="submit" class="btn btn-primary">Update Application</button>
             <a href="{{ url_for('view_applications') }}" class="btn btn-secondary">Cancel</a>
+            <button id="printButton">print the data</button>
         </form>
     </div>
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
 </html>
