--- a/templates/AboutUs.html
+++ b/templates/AboutUs.html
@@ -28,6 +28,7 @@
         <a href="{{ url_for('mentors') }}">Technical Mentor</a>
         <a href="{{ url_for('contact') }}">Contact Us</a>
         <a href="{{ url_for('apply') }}">Apply</a>
+        <a href="{{ url_for('auth') }}">login</a>
       </div>
       <div class="toggle-menu" onclick="toggleMenu()">
         <div></div>
