--- a/templates/apply.html
+++ b/templates/apply.html
@@ -23,6 +23,7 @@
         <a href="{{ url_for('mentors') }}">Technical Mentor</a>
         <a href="{{ url_for('contact') }}">Contact Us</a>
         <a href="{{ url_for('apply') }}">Apply</a>
+        <a href="{{ url_for('auth') }}">auth</a>
       </div>
       <div class="toggle-menu" onclick="toggleMenu()">
         <div></div>
