--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,22 @@
     />
   </head>
   <body>
+    <style>
+      .logout-button {
+        background-color: #ff4d4d; /* Red color */
+        color: white;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 5px;
+        text-decoration: none;
+        font-weight: bold;
+        cursor: pointer;
+      }
+
+      .logout-button:hover {
+        background-color: #cc0000; /* Darker red on hover */
+      }
+    </style>
     <nav class="navbar">
       <div class="navbar-logo">Al Noor Bootcamp</div>
       <div class="nav-links">
@@ -26,6 +42,11 @@
         <a href="{{ url_for('contact') }}">Contact Us</a>
         <a href="{{ url_for('apply') }}">Apply</a>
         <a href="{{ url_for('auth') }}">login</a>
+        {% if 'user_id' in session %}
+        <a href="{{ url_for('auth.logout') }}">Logout</a>
+        {% else %}
+        <a href="{{ url_for('auth.login') }}">Login</a>
+        {% endif %}
       </div>
       <div class="toggle-menu" onclick="toggleMenu()">
         <div></div>
