--- a/templates/index.html
+++ b/templates/index.html
@@ -152,20 +152,24 @@
         <div class="footer-row">
           <!-- Programs Section -->
           <div class="footer-column">
-            <h3>Programs</h3>
-            <ul>
-              <li><a href="#">Corporate</a></li>
-              <li><a href="#">One to One</a></li>
-              <li><a href="#">Consulting</a></li>
-            </ul>
+            <h3>About Us</h3>
+            <p>
+              At Al Noor Bootcamp, we believe in providing the right training at
+              the right moment to ensure you’re always ahead in your career. Our
+              carefully designed curriculum and expert guidance equip you with
+              the skills needed to succeed in the fast-evolving tech landscape.
+            </p>
           </div>
           <!-- Service Section -->
           <div class="footer-column">
-            <h3>Service</h3>
+            <h3>Our Courses</h3>
             <ul>
-              <li><a href="#">Training</a></li>
-              <li><a href="#">Coaching</a></li>
-              <li><a href="#">Consulting</a></li>
+              <li><a href="{{ url_for('courses') }}"">Web Development</a></li>
+              <li><a href="{{ url_for('courses') }}"">Data Science</a></li>
+              <li><a href="{{ url_for('courses') }}"">Cybersecurity</a></li>
+              <li><a href="{{ url_for('courses') }}"">Mobile App Development</a></li>
+              <li><a href="{{ url_for('courses') }}"">digital marketting</a></li>
+              <li><a href="{{ url_for('courses') }}"">E-Commerce</a></li>
             </ul>
           </div>
           <!-- Contact Section -->
