--- a/templates/apply.html
+++ b/templates/apply.html
@@ -14,6 +14,52 @@
     />
   </head>
   <body>
+    <style>
+      /* HTML: <div class="loader"></div> */
+      .loader {
+        width: 50px;
+        aspect-ratio: 1;
+        display: grid;
+        animation: l14 4s infinite;
+      }
+      .loader::before,
+      .loader::after {
+        content: "";
+        grid-area: 1/1;
+        border: 8px solid;
+        border-radius: 50%;
+        border-color: red red #0000 #0000;
+        mix-blend-mode: darken;
+        animation: l14 1s infinite linear;
+      }
+      .loader::after {
+        border-color: #0000 #0000 blue blue;
+        animation-direction: reverse;
+      }
+      #loading-screen {
+        display: none; /* Hidden by default */
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(
+          255,
+          255,
+          255,
+          0.8
+        ); /* Semi-transparent background */
+        z-index: 9999; /* Ensure it appears above all other content */
+        justify-content: center;
+        align-items: center;
+      }
+
+      @keyframes l14 {
+        100% {
+          transform: rotate(1turn);
+        }
+      }
+    </style>
     <nav class="navbar">
       <div class="navbar-logo">Al Noor Bootcamp</div>
       <div class="nav-links">
@@ -32,7 +78,12 @@
       </div>
     </nav>
 
-    <section id="apply-section" class="apply-section">
+    <!-- Loading Screen -->
+    <div id="loading-screen">
+      <div class="loader"></div>
+    </div>
+
+    <section id="apply-section" class="apply-section" onsubmit="showLoading()">
       <h2>Apply Now</h2>
       <form id="application-form" method="POST" action="/apply">
         <div class="form-group apply-form-group">
@@ -228,6 +279,19 @@
         </div>
       </div>
     </footer>
+
+    <script>
+      function showLoading() {
+        document.getElementById('loading-screen').style.display = 'flex';
+      }
+
+      function hideLoading() {
+        document.getElementById('loading-screen').style.display = 'none';
+      }
+
+      window.addEventListener('load', hideLoading);
+      window.addEventListener('beforeunload', showLoading);
+    </script>
 
     <script src="{{ url_for('static', filename='js/toggle.js') }}"></script>
     <script src="{{ url_for('static', filename='js/apply.js') }}"></script>
