--- a/templates/auth.html
+++ b/templates/auth.html
@@ -48,7 +48,7 @@
         {% if 'user_id' in session %}
         <a href="{{ url_for('auth.logout') }}">Logout</a>
     {% else %}
-        <a href="{{ url_for('auth.login') }}">Login</a>
+        <a href="{{ url_for('auth.login') }}"></a>
     {% endif %}
       </div>
       <div class="toggle-menu" onclick="toggleMenu()">
